syntax = "proto3";

package cc;
option go_package = "/cc";
message AppAddReq {
  string AppName = 1;
  string AppKey = 2;
  string Desc = 3;
}

message AppAddReply {
  string pong = 1;
  int64 id = 2;
}

message AppListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message ListAppData {
  int64 id = 1;
  string appKey = 2;
  string appName = 3;
  string desc = 4;
  string createTime = 5;
  string updateTime = 6;
}

message AppListReply {
  int64 total = 1;
  repeated ListAppData list = 2;
}

message AppUpdateReq {
  int64 id = 1;
  string appKey = 2;
  string appName = 3;
  string desc = 4;
}

message AppUpdateReply {
  string pong = 1;
}

message AppDelReq{
  int64 id = 1;
}

message AppDelReply {
  string pong = 1;
}

message ClusterAddReq {
  string clusterName = 1;
  string desc = 2;
  int64  appId = 3;
}

message ClusterAddReply {
  int64 id = 1;
}

message ClusterDelReq {
  int64 id = 1;
}

message ClusterDelReply {
  string pong = 1;
}

message ClusterUpdateReq {
  string clusterName = 1;
  string desc = 2;
  int64 id = 3;
}

message ClusterUpdateReply {
  string pong = 1;
}

message ClusterListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message ClusterListData {
  string clusterName = 1;
  string desc = 2;
  int64 id = 3;
  int64 appId = 4;
}

message ClusterListReply {
  repeated ClusterListData data = 1;
  int64 total = 2;
}

message KvAddReq {
  int64 appId = 1;
  int64 clusterId = 2;
  string key = 3;
  string value = 4;
  string desc = 5;
}

message KvAddReply {
  int64 id = 1;
  int64 version = 2;
  int64 create_revision = 3;
  int64 mod_revision = 4;
}

message KvGetReq {
  int64 id = 1;
}

message KvData {
  int64 appId = 1;
  int64 clusterId = 2;
  string key = 3;
  string value = 4;
  string desc = 5;
  int64 version = 6;
  int64 create_revision = 7;
  int64 mod_revision = 8;
 // TODO proto 的类型
}

service cc {
  rpc AppAdd(AppAddReq) returns(AppAddReply);
  rpc AppList(AppListReq) returns(AppListReply);
  rpc AppUpdate(AppUpdateReq) returns(AppUpdateReply);
  rpc AppDel(AppDelReq) returns(AppDelReply);

  rpc ClusterAdd(ClusterAddReq) returns(ClusterAddReply);
  rpc ClusterDel(ClusterDelReq) returns (ClusterDelReply);
  rpc ClusterUpdate(ClusterUpdateReq) returns (ClusterUpdateReply);
  rpc ClusterList(ClusterListReq) returns (ClusterListReply);
}